chore(github): add build workflow without Mergify

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 *.snap linguist-generated
 /.eslintrc.json linguist-generated
 /.gitattributes linguist-generated
+/.github/workflows/build.yml linguist-generated
 /.github/workflows/nat-off.yml linguist-generated
 /.github/workflows/nat-on.yml linguist-generated
 /.gitignore linguist-generated
