--- a/.gitattributes
+++ b/.gitattributes
@@ -4,9 +4,11 @@
 *.snap linguist-generated
 /.eslintrc.json linguist-generated
 /.gitattributes linguist-generated
+/.github/pull_request_template.md linguist-generated
 /.github/workflows/build.yml linguist-generated
 /.github/workflows/nat-off.yml linguist-generated
 /.github/workflows/nat-on.yml linguist-generated
+/.github/workflows/pull-request-lint.yml linguist-generated
 /.gitignore linguist-generated
 /.npmignore linguist-generated
 /.npmrc linguist-generated
