--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 !/.projen/tasks.json
 !/.projen/deps.json
 !/.projen/files.json
+!/.github/workflows/pull-request-lint.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -33,6 +34,7 @@ jspm_packages/
 junit.xml
 /coverage/
 !/.github/workflows/build.yml
+!/.github/pull_request_template.md
 !/test/
 !/tsconfig.json
 !/tsconfig.dev.json
