--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@
 /.github/workflows/nat-off.yml linguist-generated
 /.github/workflows/nat-on.yml linguist-generated
 /.github/workflows/pull-request-lint.yml linguist-generated
+/.github/workflows/upgrade.yml linguist-generated
 /.gitignore linguist-generated
 /.npmignore linguist-generated
 /.npmrc linguist-generated
