--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ jspm_packages/
 junit.xml
 /coverage/
 !/.github/workflows/build.yml
+!/.github/workflows/upgrade.yml
 !/.github/pull_request_template.md
 !/test/
 !/tsconfig.json
