--- a/.github/workflows/upgrade.yml
+++ b/.github/workflows/upgrade.yml
@@ -16,8 +16,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Install dependencies
         run: npm ci
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Upgrade dependencies
         run: npx projen upgrade
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Find mutations
         id: create_patch
         run: |-
